--- a/resume.html
+++ b/resume.html
@@ -39,6 +39,8 @@
      <h3>DOB: 28-03-2003</h3>
 
      <ol>
+        <li>HObbies:</li>
+        
         <li>Coffee</li>
         <li>Tea</li>
         <li>Milk</li>
